--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,10 +19,10 @@
         <li><a href="#">People</a></li>
         <% if current_user %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= gravatar_tag current_user.email, size: 20 %><%= current_user.username %><%=current_user.username %> <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= gravatar_tag current_user.email, size: 20 %><%= current_user.username %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <
-            <li><a href="#">Profile</a></li>
+            <li><%= link_to "Profile", user_path(current_user.username)%></li>
             <li><a href="#">Friends</a></li>
             <li><%= link_to "Settings", edit_user_registration_path %>></li>
             <li role="separator" class="divider"></li>
