--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,14 +9,14 @@
 
 <div class="col-md-4">
 	<h3><%= @user.username %></h3>
-	<p>Age: </p>
-	<p>Gender: </p>
+	<p>Age: <%= @user.age%></p>
+	<p>Gender: <%= @user.gender%></p>
 </div>
 
 
 <div class="col-md-4">
 	<h1> Who am I </h1>
-	<small> bio </small>
+	<small> bio <%= @user.bio%></small>
 </div>
 
 </div>
