--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,14 +16,14 @@
       
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Timeline</a></li>
-        <li><a href="#">People</a></li>
+        <li><%= link_to "People", users_path %></li>
         <% if current_user %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= gravatar_tag current_user.email, size: 20 %><%= current_user.username %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <
             <li><%= link_to "Profile", user_path(current_user.username)%></li>
-            <li><a href="#">Friends</a></li>
+            <li><%= link_to "People", users_path %></li>
             <li><%= link_to "Settings", edit_user_registration_path %>></li>
             <li role="separator" class="divider"></li>
             <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
