added post model, still not working

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,8 @@
 		</div>
 		<!-- Post Zone -->
 		<div class="col-md-6">
-			
+			<%= render "posts/form" %>
+		
 		</div>
 		<!-- Profile Activity -->
 		<div class="col-md-3">
