--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
 		<!-- Post Zone -->
 		<div class="col-md-6">
 			<%= render "posts/form" %>
-		
+			<%= render @posts %>
 		</div>
 		<!-- Profile Activity -->
 		<div class="col-md-3">
