--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,9 @@
 		</div>
 		<!-- Post Zone -->
 		<div class="col-md-6">
-			<%= render "posts/form" %>
+			<% if current_user && current_user == @user %>
+				<%= render "posts/form" %>
+			<% end %>
 			<%= render @posts %>
 		</div>
 		<!-- Profile Activity -->
